org.eclipse.scout.rt.ui.rap.theme.rayo.mobile/theme/scout.mobile.css
/* ... */
TabItem:hover {
  background-color:#dae9f7;
  background-image:none;
}

ToolBar {
  color:black;
  padding:0px;
  spacing:0px;
  background-color:#ffffff;
  background-image:none;
  border:none;
  opacity:1;
}

ToolBar[BORDER] {
  border:1px solid #a4a4a4;
  border-radius:2px;
}

ToolItem {
  color:inherit;
  background-color:transparent;
  background-image:none;
  border:none;
  border-radius:0px;
  padding:2px 3px;
  spacing:4px;
  opacity:1;
  animation:none;
}

ToolItem[FLAT] {
  border:none;
  padding:3px 4px;
}

ToolItem:hover {
  background-color:#ffffff;
  border:1px solid #a4a4a4;
  border-radius:2px 2px 2px 2px;
  padding:2px 3px;
}

ToolItem:pressed {
  border:1px solid #a4a4a4;
  border-radius:2px;
  padding:3px 2px 1px 4px;
  background-image:url(theme/img/dotted_white.gif);
}

ToolItem:selected {
  border:1px solid #a4a4a4;
  border-radius:2px;
  padding:3px 2px 1px 4px;
  background-image:url(theme/img/dotted_white.gif);
}

ToolItem-DropDownIcon {
  background-image:url(theme/img/arrows/down.gif);
  border:none;
}

ToolItem-DropDownIcon:hover { border:1px inset; }

ToolItem-Separator { width:4px; }

Composite.viewsArea {
  background-color:#FFFFFF;
  padding:0px 0px 0px 0px;
}

Composite.viewPart {
  background-color:transparent;
  border:0px;
  border-radius:0px;
}

Composite.viewPartNoRadius {
  background-color:transparent;
  border:0px;
  border-radius:0px 0px 0px 0px;
}

Composite.form { background-color:#ebf4f8; }

Composite.listbox {
  background-color:#ffffff;
  border:1px solid #95b7c1;
  border-radius:4px;
  padding:2px;
}

Composite.listboxDisabled {
  background-color:#ffffff;
  border:1px solid #c9dadf;
  border-radius:4px;
  padding:2px;
}

Composite.formbarContainer { background-color:#ddebf4; }

Button.formButton {
  background-image:none;
  color:#000000;
  padding:6px 15px;
}

Button.formButton:selected { background-image:none; }

Button.formButton:selected:hover { background-image:none; }

Button.formButton:pressed { background-image:none; }

Button.formButton:hover { background-image:none; }

Button.formButton-active {
  background-image:none;
  background-color:#f1f7fb;
  border-radius:0px 0px 5px 5px;
  color:#000000;
  padding:0px 15px;
}

Button-FocusIndicator.formButton-active { border:none; }

Button.formButton-active:pressed { background-image:none; }

Button.formButton-active:selected { background-image:none; }

Button.formButton-active:selected:hover { background-image:none; }

Button.formButton-active:hover { background-image:none; }

Shell {
  border:none;
  padding:0px;
  background-image:none;
  opacity:1;
}

Shell[TITLE] {
  background-color:#ffffff;
  border:2px solid #67a8ce;
  border-radius:0px 0px 0px 0px;
  padding:0px 0px 0px 0px;
}

Shell[BORDER] {
  background-color:#ffffff;
  border:2px solid #67a8ce;
  border-radius:0px 0px 0px 0px;
  padding:0px 0px 0px 0px;
  box-shadow:5px 5px 4px 0px #3f3f3f;
  animation:none;
}

Shell[BORDER]:inactive { border:2px solid #91b8cf; }

Shell[TITLE]:inactive { border:2px solid #91b8cf; }

Shell:maximized {
  border:none;
  border-radius:0px 0px 0px 0px;
}

Shell:maximized:inactive {
  border:none;
  border-radius:0px 0px 0px 0px;
}

Shell-DisplayOverlay {
  animation:none;
  background-image:none;
  background-color:#565656;
  opacity:0.5;
}

Shell-Titlebar {
  font:bold 14px Arial,Helvetica,sans-serif;
  background-color:#67a8ce;
  color:#ffffff;
  padding:2px 0px 2px 13px;
  margin:0px;
  height:18px;
  border:none;
  border-radius:0px 0px 0px 0px;
}

Shell-Titlebar:inactive { background-color:#91b8cf; }

Shell-MinButton {
  margin:0px;
  background-image:url(theme/img/window/shell-min.png);
}

Shell-MaxButton {
  margin:0px;
  background-image:url(theme/img/window/shell-max.png);
}

Shell-CloseButton {
  margin:0px;
  background-image:url(theme/img/window/shell-close.png);
}

Shell-MinButton:hover { background-image:url(theme/img/window/shell-min-hover.png); }

Shell-MinButton:inactive { background-image:url(theme/img/window/shell-min.png); }

Shell-MinButton:inactive:hover { background-image:url(theme/img/window/shell-min-hover.png); }

Shell-MaxButton:hover { background-image:url(theme/img/window/shell-max-hover.png); }

Shell-MaxButton:inactive { background-image:url(theme/img/window/shell-max.png); }

Shell-MaxButton:inactive:hover { background-image:url(theme/img/window/shell-max-hover.png); }

Shell-MaxButton:maximized { background-image:url(theme/img/window/shell-restore.png); }

Shell-MaxButton:maximized:hover { background-image:url(theme/img/window/shell-restore-hover.png); }

Shell-MaxButton:maximized:inactive { background-image:url(theme/img/window/shell-restore.png); }

Shell-MaxButton:maximized:inactive:hover { background-image:url(theme/img/window/shell-restore-hover.png); }

Shell-CloseButton:hover { background-image:url(theme/img/window/shell-close-hover.png); }

Shell-CloseButton:inactive { background-image:url(theme/img/window/shell-close.png); }

Shell-CloseButton:inactive:hover { background-image:url(theme/img/window/shell-close-hover.png); }

Composite.busyIndicator {
  padding:8px;
  background-image:url(theme/img/busy/busy.gif);
}

Button {
  cursor:default;
  color:#ffffff;
  font:bold 14px Arial,Helvetica,sans-serif;
  background-color:transparent;
}

Button[PUSH] {
  background-image:gradient(linear,left top,left bottom,from(#53a4d3),to(#4890ba));
  color:#ffffff;
  animation:hoverOut 500ms ease-out;
  border-radius:5px;
  cursor:pointer;
  padding:4px 5px;
  font:bold 12px Arial,Helvetica,sans-serif;
  border:1px solid #3a7597;
}

Button[TOGGLE] {
  background-image:gradient(linear,left top,left bottom,from(#53a4d3),to(#4890ba));
  color:#ffffff;
  animation:hoverOut 500ms ease-out;
  border-radius:5px;
  cursor:pointer;
  padding:4px 5px;
  font:bold 12px Arial,Helvetica,sans-serif;
  border:1px solid #3a7597;
}
/* ... */

