bug 408807: Label / htmlfield: label & value are not aligned correctly
https://bugs.eclipse.org/bugs/show_bug.cgi?id=408807
Added extra border for custom look and feel and adjusted css files
Reviewed-on: https://git.eclipse.org/r/16505
Tested-by: Hudson CI
IP-Clean: Ken Lee <kle@bsiag.com>

--- a/org.eclipse.scout.rt.ui.rap.theme.rayo.mobile/theme/scout.mobile.css
+++ b/org.eclipse.scout.rt.ui.rap.theme.rayo.mobile/theme/scout.mobile.css
@@ -716,6 +716,10 @@ Composite.listboxDisabled {
 
 Composite.formbarContainer { background-color:#ddebf4; }
 
+Composite.labelfield { padding:6px 0px 0px 0px; }
+
+Composite.htmlfield { padding:6px 0px 0px 0px; }
+
 Button.formButton {
   background-image:none;
   color:#000000;
@@ -1240,8 +1244,6 @@ Label-SeparatorLine {
 Label-SeparatorLine[SHADOW_IN] { border:1px inset; }
 
 Label-SeparatorLine[SHADOW_OUT] { border:1px outset; }
-
-Composite.labelfield { padding:4px 0px 0px 0px; }
 
 Button.menuButton {
   background-image:url(theme/img/button/icon_menu.png);
